# call-agents

./: .gitignore  client.py  main.py  pyproject.toml
pipecatlearn/v1/: run.py  sayonething.py
pipecatlearn/v2/: README.md  bot.py  client.py  server.py
pipecatlearn/v2/templates/: streams.xml
